--- a/css/tablet.css
+++ b/css/tablet.css
@@ -2,7 +2,7 @@
 /* BELOW 992px (Tablets) */
 /**************************/
 
-@media (max-width: 992px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
   html{
     /* 12px/16px */
     font-size: 75%;
@@ -11,7 +11,7 @@
     max-width: 992px;
   }
 
-  .navbar-img{
+  .nav-bar-profile{
     display: none;
   }
 
@@ -48,28 +48,12 @@
     grid-template-columns: repeat(2, 1fr);
     row-gap: 3.6rem;
     position: relative;
-    height: 560px;
   }
 
   .certificate-item{
-    display: block;
-    line-height: 1.2;
-    
+    grid-template-columns: 1fr;
   }
 
-  .certificate-img{
-    width: 90%;
-  }
-
-  .certificate-name{
-    font-weight: 600;
-    padding-bottom: 8px;
-  }
-
-  .certificate-text{
-    width: 65%;
-    line-height: 1.6;
-  }
 
   .certificate-content::before{
     top: 270px;
@@ -94,16 +78,14 @@
   }
 
   .project-bar {
-    gap: 1px;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 16px;
+    row-gap: 8px;
   }
 
-  .project-block{
-    display: block;
-  }
-
-  .project-year{
-    padding: 4px 0 0 6px;
-    margin-right: 1rem;
+  .project-position{
+    grid-column: 2;
+    grid-row: 2;
   }
 
   .col--1{
