--- a/css/laptop.css
+++ b/css/laptop.css
@@ -318,7 +318,7 @@ body {
 
 .certificate-item{
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 2fr 3fr;
   gap: 20px;
 }
 
